--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "kantoh/mtf.locahost",
+    "name": "khangld/mtf.temp",
     "license": "proprietary",
     "type": "project",
     "autoload": {
