--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -97,15 +97,27 @@ ekino_wordpress:
         firewall_name: secured_area
         login_url: "/wp-login.php"
 liip_theme:
-    themes: ['standardTheme', 'winter_theme', 'weekend']
-    active_theme: 'standardTheme'
+    themes: ['standard', 'theme1', 'theme2']
+    active_theme: 'theme1'
     # Device specific themes/templates
-#    autodetect_theme: true
-#    path_patterns:
-#        app_resource:
+    autodetect_theme: true
+    load_controllers: true
+    path_patterns:
+        app_resource:
+            - %%app_path%%/views/themes/%%current_theme%%/%%template%%
+            - %%app_path%%/themes/%%current_theme%%/%%template%%
+            - %%app_path%%/themes/fallback_theme/%%template%%
+            - %%app_path%%/views/%%template%%
 #            - %%app_path%%/themes/%%current_theme%%/%%current_device%%/%%template%%
 #            - %%app_path%%/themes/fallback_theme/%%current_device%%/%%template%%
 #            - %%app_path%%/views/%%current_device%%/%%template%%
+#        bundle_resource:
+#            - %%bundle_path%%/Resources/themes/%%current_theme%%/%%template%%
+#            - %%bundle_path%%/Resources/themes/fallback_theme/%%template%%
+#        bundle_resource_dir:
+#            - %%dir%%/themes/%%current_theme%%/%%bundle_name%%/%%template%%
+#            - %%dir%%/themes/fallback_theme/%%bundle_name%%/%%template%%
+#            - %%dir%%/%%bundle_name%%/%%override_path%%
     # Get active theme information from cookie
 #    cookie:
 #        name: NameOfTheCookie
@@ -115,4 +127,3 @@ liip_theme:
 #        secure: false
 #        http_only: false
     # Disable controller based theme switching
-    load_controllers: false
